# georiva

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.sample.yml  docker-compose.yml  docker-entrypoint.sh  plugins.toml.sample  pyproject.toml
georiva/: pyproject.toml  requirements.txt
georiva/src/georiva/: __init__.py  manage.py  version.py
georiva/src/georiva/analysis/: apps.py  engine.py  models.py  registry.py  urls.py
georiva/src/georiva/analysis/migrations/: 0001_initial.py  0002_remove_node_analysis_remove_edge_analysis_and_more.py
georiva/src/georiva/analysis/timeseries/: apps.py  serializers.py  service.py  urls.py  views.py
georiva/src/georiva/analysis/zonal_stats/: apps.py  models.py  service.py  tasks.py  wagtail_hooks.py
georiva/src/georiva/api/: apps.py  urls.py
georiva/src/georiva/config/: asgi.py  celery.py  context_processors.py  storage.py  urls.py  wsgi.py
georiva/src/georiva/config/datetime-selector/: README.md  package-lock.json  package.json  vite.config.js
georiva/src/georiva/config/settings/: base.py  dev.py  production.py
georiva/src/georiva/config/templates/: base.html
georiva/src/georiva/core/: apps.py  asset_cleanup.py  choosers.py  derived_products.py  events.py  filename.py  ingestion.py  palette_cache.py  panels.py  plugins.py  product_chain.py  provisioning.py  storage.py  summary_items.py  table.py  tasks.py  test_asset_cleanup.py  test_derived_products.py  test_product_chain.py  test_reference_index_exclusion.py  tests.py  tile_config_view.py  unit_utils.py  utils.py  views.py  viewsets.py  wagtail_hooks.py  widget.py  zarr_manager.py
georiva/src/georiva/core/ingestion/: __init__.py  asset_writer.py  encoder.py  extractor.py  service.py
georiva/src/georiva/core/migrations/: 0001_initial.py  0002_add_default_topics.py  0002_initial.py  0003_add_default_topics.py  0003_add_default_units.py  0003_alter_catalog_file_format.py  0003_alter_variable_options_and_more.py  0003_item_asset_item_georivacore_collect_b09451_idx_and_more.py  0004_add_default_units.py  0004_alter_asset_format_alter_asset_roles.py  0004_item_source_file_index.py  0004_remove_asset_unique_variable_per_item_and_more.py  0004_remove_catalog_loader_profile_and_more.py  0005_alter_colorpalette_options.py  0005_catalog_boundary.py  0005_collection_boundary_stats_levels.py  0005_collection_visibility.py  0006_catalog_clip_mode_alter_catalog_boundary.py  0006_remove_collection_is_loader_active.py  0006_variable_unique_variable_slug_per_collection.py  0007_data_managers_group.py  0007_remove_colorpalette_colors_and_more.py  0007_topic_catalog_topics.py  0008_add_default_topics.py  0008_alter_colorpalette_id.py  0009_alter_collection_time_resolution.py  0009_alter_variable_value_max_alter_variable_value_min.py  0009_remove_variable_value_max_remove_variable_value_min.py  0010_alter_catalog_archive_source_files.py  0010_remove_catalog_data_source.py  0011_catalog_loader_profile.py  0011_collection_forecast_horizon_hours_and_more.py  0012_item_ingestion_log.py
georiva/src/georiva/core/models/: __init__.py  base.py  catalog.py  collection.py  dataset.py  item.py  units.py  variable.py  visualization.py
georiva/src/georiva/core/templatetags/: georiva_tags.py
georiva/src/georiva/ecmwf_aifs_source/: apps.py  models.py  source.py
georiva/src/georiva/edr/: apps.py  renderers.py  serializers.py  tests.py  urls.py  views.py
georiva/src/georiva/formats/: __init__.py  apps.py  base.py  geotiff.py  grib.py  netcdf.py  registry.py
georiva/src/georiva/geoprocessing/: __init__.py  algebra.py  calendar.py  regrid.py  temporal.py  zonal.py
georiva/src/georiva/home/: apps.py
georiva/src/georiva/ingestion/: acquisition_snapshot.py  activity_views.py  apps.py  asset_writer.py  clipper.py  constants.py  consumer.py  dashboard_views.py  encoder.py  events.py  extractor.py  ingestion_tracking.py  job_types.py  manual_upload_views.py  models.py  new_service.py  panels.py  progress.py  result.py  service.py  signals.py  snapshot.py  sse_views.py  staging_consumer.py  sweep.py  tasks.py  time_extraction.py  unprocessed.py  upload_views.py  upload_wizard_views.py  utils.py  views.py  wagtail_hooks.py
georiva/src/georiva/loaders/: __init__.py  apps.py  base.py  ftp.py  http.py  models.py  s3.py  tasks.py
georiva/src/georiva/pages/datasets/: apps.py  (+4 more)
georiva/src/georiva/processing/: apps.py  constants.py  engine.py  invocation.py  models.py  recipe.py  registry.py  tasks.py
georiva/src/georiva/sources/: acquisition_retry.py  acquisition_tracking.py  apps.py  collection_definitions.py  derivation_chain.py  derivation_invocation.py  derivation_tracking.py  health.py  job_types.py  loader.py  models.py  parameters.py  product_service.py  registry.py  setup_service.py  signals.py  source.py  tasks.py  utils.py  views.py  viewsets.py  wagtail_hooks.py  widgets.py
georiva/src/georiva/stac/: apps.py  openapi.py  renderers.py  serializers.py  urls.py  views.py
georiva/src/georiva/staging/: apps.py  models.py
georiva/src/georiva/utils/: version.py
georiva/src/georiva/virtual_zarr/: apps.py  models.py  signals.py  tasks.py  virtual_zarr.py  wagtail_hooks.py
georiva/src/georiva/visualization/: apps.py  views.py  wagtail_hooks.py
georiva/src/georiva/zarr_store/: apps.py  models.py  tasks.py  utils.py  views.py  wagtail_hooks.py  writer.py
source-plugin-boilerplate/{{ cookiecutter.project_slug }}/: .env.sample  MANIFEST.in  README.md  build.sh  dev.Dockerfile  docker-compose.yml  pyproject.toml  runtime_setup.sh  uninstall.sh
source-plugin-boilerplate/{{ cookiecutter.project_slug }}/plugins/{{ cookiecutter.project_module }}/: georiva_plugin_info.json
source-plugin-boilerplate/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_module }}/: models.py
(+321 files in other folders)
