[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "georiva"
authors = [{ name = "Erick Otenyo", email = "otenyo.erick@gmail.com" }]
description = """A modular geospatial backend for gridded data ingesting, processing, visualization, and analysis"""

# TODO: pick a license and add a LICENSE file before publishing, then restore:
#   license = "MIT"   (or license = { file = "LICENSE" })
requires-python = ">=3.12"
dynamic = ["version"]
classifiers = []
dependencies = [
    "wagtail==7.4.2",
    "django-task-ferry==0.1.1",
    "dj-database-url==3.1.2",
    "django-timescaledb==0.2.13",
    "django-environ==0.13.0",
    "psycopg2==2.9.12",
    "django-dbbackup==5.3.0",
    "django-countries==9.0.0",
    "django-countries-geoextent>=0.0.1",
    "django-cleanup==9.0.0",
    "django-timezone-field==7.2.2",
    "django-redis==7.0.0",
    "celery-singleton==0.3.1",
    "django-celery-beat==2.9.0",
    "django-celery-results==2.6.0",
    "django-extensions==4.1",
    "channels",
    "daphne",
    "minio==7.2.20",
    "gunicorn==26.0.0",
    "uvicorn[standard]==0.49.0",
    "wagtail-font-awesome-svg==2.0",
    "wagtail-icon-chooser>=0.3.0",
    "python-dateutil==2.9.0.post0",
    "wagtailgeowidget==9.1.0",
    "django-polymorphic==4.11.5",
    "django-vue-utils==0.1.8",
    "django-deep-translator==1.5.2",
    "drf-spectacular",
    "pydantic==2.13.4",
    "xarray==2026.4.0",
    "netcdf4==1.7.4",
    "zarr>=3.2.1",
    "s3fs>=2024.6.0",
    "fsspec>=2024.6.0",
    "django-storages==1.14.6",
    "boto3==1.42.49",
    "dask[complete]",
    "django-cors-headers==4.9.0",
    "adm-boundary-manager==0.3.0",
    "rasterio==1.5.0",
    "pytz==2026.2",
    "cfgrib==0.9.15.1",
    "wagtail-color-panel==1.8.1",
    "rio-cogeo==7.0.2",
    "pint==0.25.3",
    "virtual-tiff==0.5.0",
    "virtualizarr==2.6.2",
    "kerchunk==0.2.10",
    "eccodeslib>=2.47.3.22",
]

[project.scripts]
georiva = "georiva.manage:main"


[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["georiva", "georiva.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "georiva.version.__version__" }
